Bug 326039 - View state (current item, scroll position, expanded folders) is not restored when going "back"
Summary: View state (current item, scroll position, expanded folders) is not restored ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.60
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-15 08:59 UTC by Frank Reininghaus
Modified: 2013-10-26 07:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2013-10-15 08:59:22 UTC
The fix for bug 161385 caused a regression in the KDE/4.11 branch. I'll look into it - this should definitely be fixed properly, or the bad commit reverted, before 4.11.3 is tagged.

Reproducible: Always

Steps to Reproduce:
1. Scroll down, change the current item, and/or expand some folders in Details View.
2. Go to another folder.
3. Click the "Back" button in the tool bar.
Actual Results:  
The previous state of the view should be restored.

Expected Results:  
It is not restored.
Comment 1 Frank Reininghaus 2013-10-26 07:26:26 UTC
Git commit ec4efae6428a0d32657b6aaf0ceaef8238748f5c by Frank Reininghaus.
Committed on 26/10/2013 at 07:24.
Pushed by freininghaus into branch 'KDE/4.11'.

Fix broken view state restoration

The fix for bug 161385 (which was about Dolphin still showing an empty
view if a device that had been unmounted earlier was clicked in the
Places Panel) caused a regression: the view state (current item, scroll
position, Details View expansion state) was not restored any more when
going "Back".

The reason is that "m_view->reload()" in
DolphinViewContainer::setUrl(const KUrl& newUrl) was always executed
just after entering a directory, and that command overwrites this
information.

Distinguishing between "change URL" and "reload the view" works better
if it's done in DolphinMainWindow instead of DolphinViewContainer.
FIXED-IN: 4.11.3
REVIEW: 113290

M  +14   -1    dolphin/src/dolphinmainwindow.cpp
M  +7    -0    dolphin/src/dolphinmainwindow.h
M  +0    -4    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/ec4efae6428a0d32657b6aaf0ceaef8238748f5c